fix: font sizes and readability

--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -41,7 +41,7 @@
   &__desc {
     font-size: 1.6rem;
     letter-spacing: 0.2em;
-    line-height: 2.4rem;
+    line-height: 3.2rem;
     margin-bottom: 7.2rem;
     padding-left: 8rem;
     margin-bottom: 23rem;
