--- a/src/components/HeroSub/styles.scss
+++ b/src/components/HeroSub/styles.scss
@@ -27,7 +27,7 @@
   }
 
   &__copy {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     letter-spacing: .2em;
     line-height: 3.2rem;
     margin-top: 3.5rem;
