--- a/src/components/HowToJoin/styles.scss
+++ b/src/components/HowToJoin/styles.scss
@@ -49,6 +49,7 @@
     max-width: 33rem;
     margin-top: 3.2rem;
     opacity: .8;
+    font-size: 1.6rem;
   }
 
   &__list {
