--- a/src/components/Pricing2/styles.scss
+++ b/src/components/Pricing2/styles.scss
@@ -60,7 +60,7 @@
     position: relative;
     z-index: 1;
     width: 50%;
-    font-size: 1.4rem;
+    font-size: 1.6rem;
     line-height: 3.2rem;
     letter-spacing: 0.2em;
     padding: 3rem 3.5rem;
